# DSL

./: .gitignore  CHANGELOG.md  Makefile.generated  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_core_algebra.py  02_make.py  03_kconfig.py  run_all.sh
src/dsl/: __init__.py  container.py  content.py  generic_args.py  lang.py  node.py  typing_utils.py  var.py
src/dsl/core/: dsl.py  language.py  render.py  var.py  variable.py
src/dsl/kconfig/: __init__.py  block.py  const.py  core.py  lang.py  option.py  var.py
src/dsl/language/: kconfig.py  makefile.py
src/dsl/make/: __init__.py  assignment.py  block.py  core.py  function.py  keyword.py  lang.py  rule.py  var.py
src/dsl/variable/: kconfig.py  makefile.py
tests/: conftest.py  test_content.py  test_kconfig.py  test_make.py  test_node.py  test_var_algebra.py  test_var_binding.py
